Anonymous | Login | 2021-01-24 05:58 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030821 | Open CASCADE | [OCCT] OCCT:Data Exchange | public | 2019-07-01 11:56 | 2019-07-08 12:58 | ||||
Reporter | kgv | ||||||||
Assigned To | kgv | ||||||||
Priority | normal | Severity | feature | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030821: Data Exchange, RWGltf_CafReader - fallback to Mesh name in case of Node name is empty | ||||||||
Description | Some glTF files might have empty Node name but have non-empty Mesh name. In this case, it is desirable getting name from Mesh. | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | ![]() ![]() ![]() | ||||||||
![]() |
|||||||
|
![]() |
|
(0085367) git (administrator) 2019-07-01 11:58 |
Branch CR30821 has been created by kgv. SHA-1: 2eb9d0ab1d8867280cbcdd04a3246db85bce8e4b Detailed log of new commits: Author: kgv Date: Mon Jul 1 11:56:41 2019 +0300 0030821: Data Exchange, RWGltf_CafReader - fallback to Mesh name in case of Node name is empty Added option to use Mesh name as fallback, enabled by default. |
(0085370) git (administrator) 2019-07-01 13:33 |
Branch CR30821 has been updated forcibly by kgv. SHA-1: 803bdcdf2b1cddb9552fd892968b5fc11a73b392 |
(0085372) kgv (developer) 2019-07-01 16:12 edited on: 2019-07-01 16:12 |
Please raise the patch. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30821-master-KGV/ [^] |
(0085378) apn (administrator) 2019-07-02 15:13 |
Combination - OCCT branch : CR30821 master SHA - 2eb9d0ab1d8867280cbcdd04a3246db85bce8e4b d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - db8c86cbe38365457a0bfa462c99cda5c5911d58 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16496.76000000006 / 16485.620000000054 [+0.07%] Products Total CPU difference: 10500.230000000072 / 10512.000000000038 [-0.11%] Windows-64-VC14: OCCT Total CPU difference: 17873.0 / 17868.765625 [+0.02%] Products Total CPU difference: 12096.953125 / 12192.9375 [-0.79%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0085470) git (administrator) 2019-07-08 12:58 |
Branch CR30821 has been deleted by inv. SHA-1: 803bdcdf2b1cddb9552fd892968b5fc11a73b392 |
![]() |
|||
occt: master 803bdcdf
Timestamp: 2019-07-01 08:56:41 Author: kgv [ Details ] [ Diff ] |
0030821: Data Exchange, RWGltf_CafReader - fallback to Mesh name in case of Node name is empty Added option to use Mesh name as fallback, enabled by default. |
||
mod - src/RWGltf/RWGltf_CafReader.cxx | [ Diff ] [ File ] | ||
mod - src/RWGltf/RWGltf_CafReader.hxx | [ Diff ] [ File ] | ||
mod - src/RWGltf/RWGltf_GltfJsonParser.cxx | [ Diff ] [ File ] | ||
mod - src/RWGltf/RWGltf_GltfJsonParser.pxx | [ Diff ] [ File ] | ||
mod - src/RWMesh/RWMesh_CafReader.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-07-01 11:56 | kgv | New Issue | |
2019-07-01 11:56 | kgv | Assigned To | => kgv |
2019-07-01 11:56 | kgv | File Added: 2CylinderEngine.glb | |
2019-07-01 11:58 | git | Note Added: 0085367 | |
2019-07-01 11:58 | kgv | File Added: 2cyl_cadass1.2.1_OK.png | |
2019-07-01 11:58 | kgv | File Added: 2cyl_cadass1.3dev_KO.png | |
2019-07-01 12:43 | kgv | Relationship added | child of 0030691 |
2019-07-01 13:33 | git | Note Added: 0085370 | |
2019-07-01 16:12 | kgv | Note Added: 0085372 | |
2019-07-01 16:12 | kgv | Assigned To | kgv => bugmaster |
2019-07-01 16:12 | kgv | Status | new => resolved |
2019-07-01 16:12 | kgv | Note Edited: 0085372 | View Revisions |
2019-07-01 16:12 | kgv | Status | resolved => reviewed |
2019-07-02 08:46 | kgv | Relationship added | related to 0030822 |
2019-07-02 13:28 | apn | Test case number | => Not needed |
2019-07-02 15:13 | apn | Note Added: 0085378 | |
2019-07-02 15:13 | apn | Status | reviewed => tested |
2019-07-07 12:19 | kgv | Changeset attached | => occt master 803bdcdf |
2019-07-07 12:19 | kgv | Assigned To | bugmaster => kgv |
2019-07-07 12:19 | kgv | Status | tested => verified |
2019-07-07 12:19 | kgv | Resolution | open => fixed |
2019-07-08 12:58 | git | Note Added: 0085470 |
Copyright © 2000 - 2021 MantisBT Team |