0030821: Data Exchange, RWGltf_CafReader - fallback to Mesh name in case of Node name is empty

Added option to use Mesh name as fallback, enabled by default.